{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 174,
  "lineage": "b9fff308-8e5f-f09e-1b8a-d303a44c25a5",
  "resources": [
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/dev-ruler-377318/zones/europe-west2-a/instanceGroups/lb-backend",
                "max_utilization": 0.8
              }
            ],
            "connection_draining_timeout_sec": 0,
            "creation_timestamp": "2023-02-15T12:17:24.269-08:00",
            "enable_cdn": false,
            "fingerprint": "0yPKlgAx5Ek=",
            "health_checks": [
              "projects/dev-ruler-377318/global/healthChecks/http-basic-check"
            ],
            "id": "projects/dev-ruler-377318/global/backendServices/web-backend-service",
            "load_balancing_scheme": "EXTERNAL",
            "name": "web-backend-service",
            "port_name": "http",
            "project": "dev-ruler-377318",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/dev-ruler-377318/global/backendServices/web-backend-service",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "module.load_balancer.google_compute_health_check.default",
            "module.network.google_compute_network.network",
            "module.network.google_compute_subnetwork.subnet_2",
            "module.vm.google_compute_instance_group_manager.default",
            "module.vm.google_compute_instance_template.template"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/dev-ruler-377318/global/forwardingRules/http-content-rule",
            "ip_address": "34.117.225.242",
            "ip_protocol": "TCP",
            "load_balancing_scheme": "EXTERNAL",
            "name": "http-content-rule",
            "port_range": "80-80",
            "project": "dev-ruler-377318",
            "self_link": "https://www.googleapis.com/compute/v1/projects/dev-ruler-377318/global/forwardingRules/http-content-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/dev-ruler-377318/global/targetHttpProxies/http-lb-proxy"
          },
          "dependencies": [
            "module.load_balancer.google_compute_backend_service.default",
            "module.load_balancer.google_compute_health_check.default",
            "module.load_balancer.google_compute_target_http_proxy.default",
            "module.load_balancer.google_compute_url_map.default",
            "module.network.google_compute_global_address.default",
            "module.network.google_compute_network.network",
            "module.network.google_compute_subnetwork.subnet_2",
            "module.vm.google_compute_instance_group_manager.default",
            "module.vm.google_compute_instance_template.template"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-02-15T12:18:09.326-08:00",
            "id": "projects/dev-ruler-377318/global/targetHttpProxies/http-lb-proxy",
            "name": "http-lb-proxy",
            "project": "dev-ruler-377318",
            "proxy_id": 6474183084680970478,
            "self_link": "https://www.googleapis.com/compute/v1/projects/dev-ruler-377318/global/targetHttpProxies/http-lb-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/dev-ruler-377318/global/urlMaps/web-map-http"
          },
          "dependencies": [
            "module.load_balancer.google_compute_backend_service.default",
            "module.load_balancer.google_compute_health_check.default",
            "module.load_balancer.google_compute_url_map.default",
            "module.network.google_compute_network.network",
            "module.network.google_compute_subnetwork.subnet_2",
            "module.vm.google_compute_instance_group_manager.default",
            "module.vm.google_compute_instance_template.template"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-02-15T12:17:57.172-08:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/dev-ruler-377318/global/backendServices/web-backend-service",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "qydn4mpQnHo=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/dev-ruler-377318/global/urlMaps/web-map-http",
            "map_id": 1093343246165246746,
            "name": "web-map-http",
            "path_matcher": [],
            "project": "dev-ruler-377318",
            "self_link": "https://www.googleapis.com/compute/v1/projects/dev-ruler-377318/global/urlMaps/web-map-http",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.load_balancer.google_compute_backend_service.default",
            "module.load_balancer.google_compute_health_check.default",
            "module.network.google_compute_network.network",
            "module.network.google_compute_subnetwork.subnet_2",
            "module.vm.google_compute_instance_group_manager.default",
            "module.vm.google_compute_instance_template.template"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-02-15T12:16:23.772-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/dev-ruler-377318/global/firewalls/fw-allow-health-check",
            "name": "fw-allow-health-check",
            "network": "https://www.googleapis.com/compute/v1/projects/dev-ruler-377318/global/networks/dvwa-network",
            "priority": 1001,
            "project": "dev-ruler-377318",
            "self_link": "https://www.googleapis.com/compute/v1/projects/dev-ruler-377318/global/firewalls/fw-allow-health-check",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16",
              "92.237.154.94/32"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "allow-health-check"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "instance-firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-02-15T12:16:23.798-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/dev-ruler-377318/global/firewalls/instance-firewall",
            "name": "instance-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/dev-ruler-377318/global/networks/dvwa-network",
            "priority": 1000,
            "project": "dev-ruler-377318",
            "self_link": "https://www.googleapis.com/compute/v1/projects/dev-ruler-377318/global/firewalls/instance-firewall",
            "source_ranges": [
              "92.237.154.94/32"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "instance-firewall"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.117.225.242",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-02-15T12:16:01.261-08:00",
            "id": "projects/dev-ruler-377318/global/addresses/lb-ipv4-1",
            "name": "lb-ipv4-1",
            "prefix_length": 0,
            "project": "dev-ruler-377318",
            "self_link": "https://www.googleapis.com/compute/v1/projects/dev-ruler-377318/global/addresses/lb-ipv4-1"
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/dev-ruler-377318/global/networks/dvwa-network",
            "name": "dvwa-network",
            "project": "dev-ruler-377318",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/dev-ruler-377318/global/networks/dvwa-network"
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-02-15T12:16:24.894-08:00",
            "gateway_address": "10.1.0.1",
            "id": "projects/dev-ruler-377318/regions/europe-west2/subnetworks/subnet-1",
            "ip_cidr_range": "10.1.0.0/16",
            "name": "subnet-1",
            "network": "https://www.googleapis.com/compute/v1/projects/dev-ruler-377318/global/networks/dvwa-network",
            "private_ip_google_access": false,
            "project": "dev-ruler-377318",
            "region": "europe-west2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/dev-ruler-377318/regions/europe-west2/subnetworks/subnet-1"
          },
          "dependencies": [
            "module.network.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-02-15T12:16:24.653-08:00",
            "gateway_address": "10.2.0.1",
            "id": "projects/dev-ruler-377318/regions/europe-west2/subnetworks/subnet-2",
            "ip_cidr_range": "10.2.0.0/16",
            "name": "subnet-2",
            "network": "https://www.googleapis.com/compute/v1/projects/dev-ruler-377318/global/networks/dvwa-network",
            "private_ip_google_access": false,
            "project": "dev-ruler-377318",
            "region": "europe-west2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/dev-ruler-377318/regions/europe-west2/subnetworks/subnet-2"
          },
          "dependencies": [
            "module.network.google_compute_network.network"
          ]
        }
      ]
    }
  ]
}